--- a/APIdoc/js/index.html
+++ b/APIdoc/js/index.html
@@ -3,7 +3,7 @@
 		<title>Point.io JS test</title>
 		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<script src="pio.js"></script>		
+		<script src="APIDoc.js"></script>		
 
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
