--- a/APIflow/code1.html
+++ b/APIflow/code1.html
@@ -17,9 +17,9 @@
 			</div>
 
 <script>
-$("#javaOne pre").load("java/apidoc/src/main/java/io/point/apidoc/tutorials/ListFoldersPreviewFile.java")
-$("#jsOne pre").load("js/tutorials/listFoldersPreviewFile.js")
-$("#phpOne pre").load("php/tutorials/listFoldersPreviewFile.php")
-$("#pythonOne pre").load("python/tutorials/listFoldersPreviewFile.py")
-$("#scalaOne pre").load("scala/apidoc/src/main/scala/io/point/apidoc/tutorials/ListFoldersPreviewFile.scala")
+$("#javaOne pre").load("java/apiflow/src/main/java/io/point/apiflow/tutorials/BasicWorkflow.java")
+// $("#jsOne pre").load("js/tutorials/listFoldersPreviewFile.js")
+// $("#phpOne pre").load("php/tutorials/listFoldersPreviewFile.php")
+// $("#pythonOne pre").load("python/tutorials/listFoldersPreviewFile.py")
+// $("#scalaOne pre").load("scala/APIDoc/src/main/scala/io/point/tutorials/ListFoldersPreviewFile.scala")
 </script>
