flow for php, js, ruby

--- a/APIflow/code1.html
+++ b/APIflow/code1.html
@@ -4,6 +4,7 @@
 			  <li><a href="#jsOne" data-toggle="tab">JavaScript</a></li>
 			  <li><a href="#phpOne" data-toggle="tab">PHP</a></li>
 			  <li><a href="#pythonOne" data-toggle="tab">Python</a></li>
+			  <li><a href="#rubyOne" data-toggle="tab">Ruby</a></li>
 			  <li><a href="#scalaOne" data-toggle="tab">Scala</a></li>
 			</ul>
 
@@ -13,13 +14,15 @@
 			  <div class="tab-pane" id="jsOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="phpOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="pythonOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+			  <div class="tab-pane" id="rubyOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="scalaOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			</div>
 
 <script>
 $("#javaOne pre").load("java/apiflow/src/main/java/io/point/apiflow/tutorials/BasicWorkflow.java")
-// $("#jsOne pre").load("js/tutorials/listFoldersPreviewFile.js")
-// $("#phpOne pre").load("php/tutorials/listFoldersPreviewFile.php")
-// $("#pythonOne pre").load("python/tutorials/listFoldersPreviewFile.py")
-// $("#scalaOne pre").load("scala/APIDoc/src/main/scala/io/point/tutorials/ListFoldersPreviewFile.scala")
+$("#jsOne pre").load("js/tutorials/basicWorkflow.js")
+$("#phpOne pre").load("php/tutorials/basicWorkflow.php")
+$("#pythonOne pre").load("python/tutorials/basicWorkflow.py")
+$("#rubyOne pre").load("ruby/tutorials/basicWorkflow.rb")
+$("#scalaOne pre").load("scala/apiflow/src/main/scala/io/point/apiflow/tutorials/BasicWorkflow.scala")
 </script>
