almost done 2nd flow

--- a/APIflow/code1.html
+++ b/APIflow/code1.html
@@ -19,10 +19,10 @@
 			</div>
 
 <script>
-$("#javaOne pre").load("java/apiflow/src/main/java/io/point/apiflow/tutorials/BasicWorkflow.java")
-$("#jsOne pre").load("js/tutorials/basicWorkflow.js")
-$("#phpOne pre").load("php/tutorials/basicWorkflow.php")
-$("#pythonOne pre").load("python/tutorials/basicWorkflow.py")
-$("#rubyOne pre").load("ruby/tutorials/basicWorkflow.rb")
-$("#scalaOne pre").load("scala/apiflow/src/main/scala/io/point/apiflow/tutorials/BasicWorkflow.scala")
+$("#javaOne pre").load("java/apiflow/src/main/java/io/point/apiflow/tutorials/Simple.java")
+$("#jsOne pre").load("js/tutorials/simple.js")
+$("#phpOne pre").load("php/tutorials/simple.php")
+$("#pythonOne pre").load("python/tutorials/simple.py")
+$("#rubyOne pre").load("ruby/tutorials/simple.rb")
+$("#scalaOne pre").load("scala/apiflow/src/main/scala/io/point/apiflow/tutorials/Simple.scala")
 </script>
