--- a/APIflow/index.html
+++ b/APIflow/index.html
@@ -56,17 +56,17 @@ $(document).ready(function () {
 	            $("#resource_FlowTutorialOne\\.json").append('<div id="FlowTutorialOneCode" class="hide"></div>')
 				$( "#FlowTutorialOneCode" ).load( "code1.html" );	            
 
-				// $("#resource_CoreTutorialTwo\\.json").append('<div id="CoreTutorialTwoCode" class="hide"></div>')
-				// $( "#CoreTutorialTwoCode" ).load( "code2.html" );	            
+				$("#resource_FlowTutorialTwo\\.json").append('<div id="FlowTutorialTwoCode" class="hide"></div>')
+				$( "#FlowTutorialTwoCode" ).load( "code2.html" );	            
 
-				// $("#resource_CoreTutorialThree\\.json").append('<div id="CoreTutorialThreeCode" class="hide"></div>')
-				// $( "#CoreTutorialThreeCode" ).load( "code3.html" );	            
+				// $("#resource_FlowTutorialThree\\.json").append('<div id="FlowTutorialThreeCode" class="hide"></div>')
+				// $( "#FlowTutorialThreeCode" ).load( "code3.html" );	            
 
-				// $("#resource_CoreTutorialFour\\.json").append('<div id="CoreTutorialFourCode" class="hide"></div>')
-				// $( "#CoreTutorialFourCode" ).load( "code4.html" );	            
+				// $("#resource_FlowTutorialFour\\.json").append('<div id="FlowTutorialFourCode" class="hide"></div>')
+				// $( "#FlowTutorialFourCode" ).load( "code4.html" );	            
 
-				// $("#resource_CoreTutorialFive\\.json").append('<div id="CoreTutorialFiveCode" class="hide"></div>')
-				// $( "#CoreTutorialFiveCode" ).load( "code5.html" );	            
+				// $("#resource_FlowTutorialFive\\.json").append('<div id="FlowTutorialFiveCode" class="hide"></div>')
+				// $( "#FlowTutorialFiveCode" ).load( "code5.html" );	            
 	        }
 	      $('pre code').each(function(i, e) {hljs.highlightBlock(e)});
 	    },
