--- a/APIflow/code1.html
+++ b/APIflow/code1.html
@@ -21,7 +21,7 @@
 <script>
 $("#javaOne pre").load("java/apiflow/src/main/java/io/point/apiflow/tutorials/Simple.java")
 $("#jsOne pre").load("js/tutorials/simple.js")
-$("#phpOne pre").load("php/tutorials/simple.php")
+$("#phpOne pre").load("php/tutorials/showSimple.php")
 $("#pythonOne pre").load("python/tutorials/simple.py")
 $("#rubyOne pre").load("ruby/tutorials/simple.rb")
 $("#scalaOne pre").load("scala/apiflow/src/main/scala/io/point/apiflow/tutorials/Simple.scala")
