--- a/APIflow/code2.html
+++ b/APIflow/code2.html
@@ -21,7 +21,7 @@
 <script>
 $("#javaTwo pre").load("java/apiflow/src/main/java/io/point/apiflow/tutorials/SimpleMsg.java")
 $("#jsTwo pre").load("js/tutorials/simpleMsg.js")
-// $("#phpTwo pre").load("php/tutorials/simpleMsg.php")
+$("#phpTwo pre").load("php/tutorials/showSimpleMsg.php")
 $("#pythonTwo pre").load("python/tutorials/simpleMsg.py")
 $("#rubyTwo pre").load("ruby/tutorials/simpleMsg.rb")
 $("#scalaTwo pre").load("scala/apiflow/src/main/scala/io/point/apiflow/tutorials/SimpleMsg.scala")
