--- a/APIdoc/code1.html
+++ b/APIdoc/code1.html
@@ -4,6 +4,7 @@
 			  <li><a href="#jsOne" data-toggle="tab">JavaScript</a></li>
 			  <li><a href="#phpOne" data-toggle="tab">PHP</a></li>
 			  <li><a href="#pythonOne" data-toggle="tab">Python</a></li>
+			  <li><a href="#rubyOne" data-toggle="tab">Ruby</a></li>
 			  <li><a href="#scalaOne" data-toggle="tab">Scala</a></li>
 			</ul>
 
@@ -13,13 +14,27 @@
 			  <div class="tab-pane" id="jsOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="phpOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="pythonOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+			  <div class="tab-pane" id="rubyOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="scalaOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			</div>
 
 <script>
-$("#javaOne pre").load("java/apidoc/src/main/java/io/point/apidoc/tutorials/ListFoldersPreviewFile.java")
-$("#jsOne pre").load("js/tutorials/listFoldersPreviewFile.js")
-$("#phpOne pre").load("php/tutorials/listFoldersPreviewFile.php")
-$("#pythonOne pre").load("python/tutorials/listFoldersPreviewFile.py")
-$("#scalaOne pre").load("scala/apidoc/src/main/scala/io/point/apidoc/tutorials/ListFoldersPreviewFile.scala")
+var base = 'https://github.com/PointIO/sample-code/tree/master/APIdoc/'
+function source(url){
+	return '<a class="pull-right" target="_blank" href="' + url + '"><i class="fa fa-github"></i> Source</a>'
+}
+
+var codeMap = {};
+codeMap["javaOne"] = "java/apidoc/src/main/java/io/point/apidoc/tutorials/ListFoldersPreviewFile.java"
+codeMap["jsOne"] = "js/tutorials/listFoldersPreviewFile.js"
+codeMap["phpOne"] = "php/tutorials/listFoldersPreviewFile.php"
+codeMap["pythonOne"] = "python/tutorials/listFoldersPreviewFile.py"
+codeMap["rubyOne"] = "ruby/tutorials/listFoldersPreviewFile.rb"
+codeMap["scalaOne"] = "scala/apidoc/src/main/scala/io/point/apidoc/tutorials/ListFoldersPreviewFile.scala"
+
+
+for(var key in codeMap){
+	$("#" + key).prepend(source(base + codeMap[key]))
+	$("#" + key + " pre").load(codeMap[key])	
+}
 </script>
