--- a/APIdoc/code5.html
+++ b/APIdoc/code5.html
@@ -4,7 +4,8 @@
 			  <li><a href="#jsFive" data-toggle="tab">JavaScript</a></li>
 			  <li><a href="#phpFive" data-toggle="tab">PHP</a></li>
 			  <li><a href="#pythonFive" data-toggle="tab">Python</a></li>
-			  <li><a href="#scalav" data-toggle="tab">Scala</a></li>
+			  <li><a href="#rubyFive" data-toggle="tab">Ruby</a></li>
+			  <li><a href="#scalaFive" data-toggle="tab">Scala</a></li>
 			</ul>
 
 			<!-- Tab panes -->
@@ -13,13 +14,26 @@
 			  <div class="tab-pane" id="jsFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="phpFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="pythonFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+			  <div class="tab-pane" id="rubyFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			  <div class="tab-pane" id="scalaFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
 			</div>
 
 <script>
-$("#javaFive pre").load("java/apidoc/src/main/java/io/point/apidoc/tutorials/AddStorageConnection.java")
-$("#jsFive pre").load("js/tutorials/addStorageConnection.js")
-$("#phpFive pre").load("php/tutorials/addStorageConnection.php")
-$("#pythonFive pre").load("python/tutorials/addStorageConnection.py")
-$("#scalaFive pre").load("scala/apidoc/src/main/scala/io/point/apidoc/tutorials/AddStorageConnection.scala")
+var base = 'https://github.com/PointIO/sample-code/tree/master/APIdoc/'
+function source(url){
+	return '<a class="pull-right" target="_blank" href="' + url + '"><i class="fa fa-github"></i> Source</a>'
+}
+
+var codeMap = {};
+codeMap["javaFive"] = "java/apidoc/src/main/java/io/point/apidoc/tutorials/AddStorageConnection.java"
+codeMap["jsFive"] = "js/tutorials/addStorageConnection.js"
+codeMap["phpFive"] = "php/tutorials/addStorageConnection.php"
+codeMap["pythonFive"] = "python/tutorials/addStorageConnection.py"
+codeMap["rubyFive"] = "ruby/tutorials/addStorageConnection.rb"
+codeMap["scalaFive"] = "scala/apidoc/src/main/scala/io/point/apidoc/tutorials/AddStorageConnection.scala"
+
+for(var key in codeMap){
+	$("#" + key).prepend(source(base + codeMap[key]))
+	$("#" + key + " pre").load(codeMap[key])	
+}
 </script>
