additional c# code, apiflow fix

--- a/APIflow/index.html
+++ b/APIflow/index.html
@@ -37,8 +37,8 @@ $(document).ready(function () {
 	prettyPrint();
 
 	window.swaggerUi = new SwaggerUi({
-	    // discoveryUrl: "http://point.io/sites/default/files/APIFlow.json",
-	    discoveryUrl: "http://localhost/sample-code/APIflow/tutorials/APIFlow.json",
+	    discoveryUrl: "http://point.io/sites/default/files/APIFlow.json",
+	    // discoveryUrl: "http://localhost/sample-code/APIflow/tutorials/APIFlow.json",
 	    dom_id:"swagger-ui-container",
 	    supportHeaderParams: true,
 	    supportedSubmitMethods: ['get', 'post', 'put'],
