--- a/APIdoc/code1.html
+++ b/APIdoc/code1.html
@@ -1,22 +1,25 @@
 <div class="col-md-6">
-			<ul class="nav nav-tabs">
-			  <li class="active"><a href="#javaOne" data-toggle="tab">Java</a></li>
-			  <li><a href="#jsOne" data-toggle="tab">JavaScript</a></li>
-			  <li><a href="#phpOne" data-toggle="tab">PHP</a></li>
-			  <li><a href="#pythonOne" data-toggle="tab">Python</a></li>
-			  <li><a href="#rubyOne" data-toggle="tab">Ruby</a></li>
-			  <li><a href="#scalaOne" data-toggle="tab">Scala</a></li>
-			</ul>
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#javaOne" data-toggle="tab">Java</a></li>
+		<li><a href="#cOne" data-toggle="tab">C#</a></li>
+	  	<li><a href="#jsOne" data-toggle="tab">JavaScript</a></li>
+	  	<li><a href="#phpOne" data-toggle="tab">PHP</a></li>
+	 	<li><a href="#pythonOne" data-toggle="tab">Python</a></li>
+	  	<li><a href="#rubyOne" data-toggle="tab">Ruby</a></li>
+	  	<li><a href="#scalaOne" data-toggle="tab">Scala</a></li>
+	</ul>
 
-			<!-- Tab panes -->
-			<div class="tab-content">
-			  <div class="tab-pane active" id="javaOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="jsOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="phpOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="pythonOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="rubyOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="scalaOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			</div>
+	<!-- Tab panes -->
+	<div class="tab-content">
+	  <div class="tab-pane active" id="javaOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="cOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="jsOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="phpOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="pythonOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="rubyOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="scalaOne"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	</div>
+</div>	
 
 <script>
 var base = 'https://github.com/PointIO/sample-code/tree/master/APIdoc/'
@@ -26,6 +29,7 @@ function source(url){
 
 var codeMap = {};
 codeMap["javaOne"] = "java/apidoc/src/main/java/io/point/apidoc/tutorials/ListFoldersPreviewFile.java"
+codeMap["cOne"] = "c-sharp/ListFoldersPreviewFile.cs"
 codeMap["jsOne"] = "js/tutorials/listFoldersPreviewFile.js"
 codeMap["phpOne"] = "php/tutorials/listFoldersPreviewFile.php"
 codeMap["pythonOne"] = "python/tutorials/listFoldersPreviewFile.py"
