--- a/APIdoc/code2.html
+++ b/APIdoc/code2.html
@@ -1,23 +1,25 @@
 <div class="col-md-6">
-			<ul class="nav nav-tabs">
-			  <li class="active"><a href="#javaTwo" data-toggle="tab">Java</a></li>
-			  <li><a href="#jsTwo" data-toggle="tab">JavaScript</a></li>
-			  <li><a href="#phpTwo" data-toggle="tab">PHP</a></li>
-			  <li><a href="#pythonTwo" data-toggle="tab">Python</a></li>
-			  <li><a href="#rubyTwo" data-toggle="tab">Ruby</a></li>
-			  <li><a href="#scalaTwo" data-toggle="tab">Scala</a></li>
-			</ul>
+	<ul class="nav nav-tabs">
+	  <li class="active"><a href="#javaTwo" data-toggle="tab">Java</a></li>
+	  <li><a href="#cTwo" data-toggle="tab">C#</a></li>
+	  <li><a href="#jsTwo" data-toggle="tab">JavaScript</a></li>
+	  <li><a href="#phpTwo" data-toggle="tab">PHP</a></li>
+	  <li><a href="#pythonTwo" data-toggle="tab">Python</a></li>
+	  <li><a href="#rubyTwo" data-toggle="tab">Ruby</a></li>
+	  <li><a href="#scalaTwo" data-toggle="tab">Scala</a></li>
+	</ul>
 
-			<!-- Tab panes -->
-			<div class="tab-content">
-			  <div class="tab-pane active" id="javaTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="jsTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="phpTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="pythonTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="rubyTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="scalaTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			</div>
-
+	<!-- Tab panes -->
+	<div class="tab-content">
+	  <div class="tab-pane active" id="javaTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="cTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="jsTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="phpTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="pythonTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="rubyTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="scalaTwo"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	</div>
+</div>
 <script>
 var base = 'https://github.com/PointIO/sample-code/tree/master/APIdoc/'
 function source(url){
@@ -26,6 +28,7 @@ function source(url){
 
 var codeMap = {};
 codeMap["javaTwo"] = "java/apidoc/src/main/java/io/point/apidoc/tutorials/ListFoldersDownloadFile.java"
+codeMap["cTwo"] = "c-sharp/ListFoldersDownloadFile.cs"
 codeMap["jsTwo"] = "js/tutorials/listFoldersDownloadFile.js"
 codeMap["phpTwo"] = "php/tutorials/listFoldersDownloadFile.php"
 codeMap["pythonTwo"] = "python/tutorials/listFoldersDownloadFile.py"
