--- a/APIdoc/code4.html
+++ b/APIdoc/code4.html
@@ -1,23 +1,25 @@
 <div class="col-md-6">
-			<ul class="nav nav-tabs">
-			  <li class="active"><a href="#javaFour" data-toggle="tab">Java</a></li>
-			  <li><a href="#jsFour" data-toggle="tab">JavaScript</a></li>
-			  <li><a href="#phpFour" data-toggle="tab">PHP</a></li>
-			  <li><a href="#pythonFour" data-toggle="tab">Python</a></li>
-			  <li><a href="#rubyFour" data-toggle="tab">Ruby</a></li>
-			  <li><a href="#scalaFour" data-toggle="tab">Scala</a></li>
-			</ul>
+	<ul class="nav nav-tabs">
+	  <li class="active"><a href="#javaFour" data-toggle="tab">Java</a></li>
+	  <li><a href="#cFour" data-toggle="tab">C#</a></li>
+	  <li><a href="#jsFour" data-toggle="tab">JavaScript</a></li>
+	  <li><a href="#phpFour" data-toggle="tab">PHP</a></li>
+	  <li><a href="#pythonFour" data-toggle="tab">Python</a></li>
+	  <li><a href="#rubyFour" data-toggle="tab">Ruby</a></li>
+	  <li><a href="#scalaFour" data-toggle="tab">Scala</a></li>
+	</ul>
 
-			<!-- Tab panes -->
-			<div class="tab-content">
-			  <div class="tab-pane active" id="javaFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="jsFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="phpFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="pythonFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="rubyFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="scalaFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			</div>
-
+	<!-- Tab panes -->
+	<div class="tab-content">
+	  <div class="tab-pane active" id="javaFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="cFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="jsFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="phpFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="pythonFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="rubyFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="scalaFour"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	</div>
+</div>
 <script>
 var base = 'https://github.com/PointIO/sample-code/tree/master/APIdoc/'
 function source(url){
@@ -26,6 +28,7 @@ function source(url){
 
 var codeMap = {};
 codeMap["javaFour"] = "java/apidoc/src/main/java/io/point/apidoc/tutorials/ListFoldersCheckInCheckOut.java"
+codeMap["cFour"] = "c-sharp/ListFoldersCheckInCheckOut.cs"
 codeMap["jsFour"] = "js/tutorials/listFoldersCheckInCheckOut.js"
 codeMap["phpFour"] = "php/tutorials/listFoldersCheckInCheckOut.php"
 codeMap["pythonFour"] = "python/tutorials/listFoldersCheckInCheckOut.py"
