--- a/APIdoc/code5.html
+++ b/APIdoc/code5.html
@@ -1,23 +1,25 @@
 <div class="col-md-6">
-			<ul class="nav nav-tabs">
-			  <li class="active"><a href="#javaFive" data-toggle="tab">Java</a></li>
-			  <li><a href="#jsFive" data-toggle="tab">JavaScript</a></li>
-			  <li><a href="#phpFive" data-toggle="tab">PHP</a></li>
-			  <li><a href="#pythonFive" data-toggle="tab">Python</a></li>
-			  <li><a href="#rubyFive" data-toggle="tab">Ruby</a></li>
-			  <li><a href="#scalaFive" data-toggle="tab">Scala</a></li>
-			</ul>
+	<ul class="nav nav-tabs">
+	  <li class="active"><a href="#javaFive" data-toggle="tab">Java</a></li>
+	  <li><a href="#cFive" data-toggle="tab">C#</a></li>
+	  <li><a href="#jsFive" data-toggle="tab">JavaScript</a></li>
+	  <li><a href="#phpFive" data-toggle="tab">PHP</a></li>
+	  <li><a href="#pythonFive" data-toggle="tab">Python</a></li>
+	  <li><a href="#rubyFive" data-toggle="tab">Ruby</a></li>
+	  <li><a href="#scalaFive" data-toggle="tab">Scala</a></li>
+	</ul>
 
-			<!-- Tab panes -->
-			<div class="tab-content">
-			  <div class="tab-pane active" id="javaFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="jsFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="phpFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="pythonFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="rubyFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			  <div class="tab-pane" id="scalaFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
-			</div>
-
+	<!-- Tab panes -->
+	<div class="tab-content">
+	  <div class="tab-pane active" id="javaFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="cFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="jsFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="phpFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="pythonFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="rubyFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	  <div class="tab-pane" id="scalaFive"><pre class="pull-right prettyprint col-md-12"></pre></div>
+	</div>
+</div>
 <script>
 var base = 'https://github.com/PointIO/sample-code/tree/master/APIdoc/'
 function source(url){
@@ -26,6 +28,7 @@ function source(url){
 
 var codeMap = {};
 codeMap["javaFive"] = "java/apidoc/src/main/java/io/point/apidoc/tutorials/AddStorageConnection.java"
+codeMap["cFive"] = "c-sharp/AddStorageConnection.cs"
 codeMap["jsFive"] = "js/tutorials/addStorageConnection.js"
 codeMap["phpFive"] = "php/tutorials/addStorageConnection.php"
 codeMap["pythonFive"] = "python/tutorials/addStorageConnection.py"
