--- a/APIflow/index.html
+++ b/APIflow/index.html
@@ -61,8 +61,8 @@ $(document).ready(function () {
 				$("#resource_FlowTutorialTwo\\.json").append('<div id="FlowTutorialTwoCode" class="hide"></div>')
 				$( "#FlowTutorialTwoCode" ).load( "code2.html" );	            
 
-				// $("#resource_FlowTutorialThree\\.json").append('<div id="FlowTutorialThreeCode" class="hide"></div>')
-				// $( "#FlowTutorialThreeCode" ).load( "code3.html" );	            
+				$("#resource_FlowTutorialThree\\.json").append('<div id="FlowTutorialThreeCode" class="hide"></div>')
+				$( "#FlowTutorialThreeCode" ).load( "code3.html" );	            
 
 				// $("#resource_FlowTutorialFour\\.json").append('<div id="FlowTutorialFourCode" class="hide"></div>')
 				// $( "#FlowTutorialFourCode" ).load( "code4.html" );	            
