--- a/APIflow/code2.html
+++ b/APIflow/code2.html
@@ -30,7 +30,7 @@ var codeMap = {};
 codeMap["javaTwo"] = "java/apiflow/src/main/java/io/point/apiflow/tutorials/SimpleMsg.java"
 codeMap["cTwo"] = "c-sharp/SimpleMsg.cs"
 codeMap["jsTwo"] = "js/tutorials/simpleMsg.js"
-codeMap["phpTwo"] = "php/tutorials/showSimpleMsg.php"
+codeMap["phpTwo"] = "php/tutorials/showSource.php?src=simpleMsg.php"
 codeMap["pythonTwo"] = "python/tutorials/simpleMsg.py"
 codeMap["rubyTwo"] = "ruby/tutorials/simpleMsg.rb"
 codeMap["scalaTwo"] = "scala/apiflow/src/main/scala/io/point/apiflow/tutorials/SimpleMsg.scala"
