--- a/APIflow/code3.html
+++ b/APIflow/code3.html
@@ -30,7 +30,7 @@ var codeMap = {};
 codeMap["javaThree"] = "java/apiflow/src/main/java/io/point/apiflow/tutorials/SimpleMsg.java"
 codeMap["cThree"] = "c-sharp/ListTasks.cs"
 codeMap["jsThree"] = "js/tutorials/simpleMsg.js"
-codeMap["phpThree"] = "php/tutorials/showSimpleMsg.php"
+codeMap["phpThree"] = "php/tutorials/showSource.php?src=listTasks.php"
 codeMap["pythonThree"] = "python/tutorials/simpleMsg.py"
 codeMap["rubyThree"] = "ruby/tutorials/simpleMsg.rb"
 codeMap["scalaThree"] = "scala/apiflow/src/main/scala/io/point/apiflow/tutorials/SimpleMsg.scala"
